--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -215,104 +215,6 @@
   font-display: swap;
 }
 
-/* Roobert SemiMono TRIAL */
-
-@font-face {
-  font-family: 'Roobert SemiMono TRIAL';
-  src: url('/fonts/RoobertSemiMonoTRIAL-Bold.woff2') format('woff2');
-  font-weight: bold;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Roobert SemiMono TRIAL';
-  src: url('/fonts/RoobertSemiMonoTRIAL-BoldItalic.woff2') format('woff2');
-  font-weight: bold;
-  font-style: italic;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Roobert SemiMono TRIAL';
-  src: url('/fonts/RoobertSemiMonoTRIAL-Light.woff2') format('woff2');
-  font-weight: 300;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Roobert SemiMono TRIAL';
-  src: url('/fonts/RoobertSemiMonoTRIAL-LightItalic.woff2') format('woff2');
-  font-weight: 300;
-  font-style: italic;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Roobert SemiMono TRIAL';
-  src: url('/fonts/RoobertSemiMonoTRIAL-Medium.woff2') format('woff2');
-  font-weight: 500;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Roobert SemiMono TRIAL';
-  src: url('/fonts/RoobertSemiMonoTRIAL-MediumItalic.woff2') format('woff2');
-  font-weight: 500;
-  font-style: italic;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Roobert SemiMono TRIAL';
-  src: url('/fonts/RoobertSemiMonoTRIAL-Regular.woff2') format('woff2');
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Roobert SemiMono TRIAL';
-  src: url('/fonts/RoobertSemiMonoTRIAL-RegularItalic.woff2') format('woff2');
-  font-weight: normal;
-  font-style: italic;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Roobert SemiMono TRIAL';
-  src: url('/fonts/RoobertSemiMonoTRIAL-SemiBold.woff2') format('woff2');
-  font-weight: 600;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Roobert SemiMono TRIAL';
-  src: url('/fonts/RoobertSemiMonoTRIAL-SemiBoldItalic.woff2') format('woff2');
-  font-weight: 600;
-  font-style: italic;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Roobert SemiMono TRIAL';
-  src: url('/fonts/RoobertSemiMonoTRIAL-Heavy.woff2') format('woff2');
-  font-weight: 900;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Roobert SemiMono TRIAL';
-  src: url('/fonts/RoobertSemiMonoTRIAL-HeavyItalic.woff2') format('woff2');
-  font-weight: 900;
-  font-style: italic;
-  font-display: swap;
-}
-
 @layer utilities {
   .no-scrollbar::-webkit-scrollbar {
     display: none;
@@ -336,4 +238,10 @@
 
 *{
   font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  /* font-family: 'Roobert TRIAL'; */
+}
+
+.font-roobert{
+  /* font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
+  font-family: 'Roobert TRIAL';
 }
