--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -51,28 +51,31 @@
   --radius-lg: 16px; /* Cards, modals */
   --radius-xl: 24px; /* Larger panels or dialogs */
   --radius-2xl: 32px;
-  --animate-marquee:
-    marquee var(--duration) infinite linear;
-  --animate-marquee-vertical:
-    marquee-vertical var(--duration) linear infinite;
-  @keyframes marquee {
-  from {
-    transform:
-    translateX(0);
+  --animate-marquee: marquee var(--duration) infinite linear;
+  --animate-marquee-vertical: marquee-vertical var(--duration) linear infinite;
+  --animate-slider: slider linear;
+  @keyframes slider {
+    from {
+      transform: translateX(0);
     }
-  to {
-    transform:
-    translateX(calc(-100% - var(--gap)));
+    to {
+      transform: translateX(calc(-100% - var(--gap)));
+    }
+  }
+  @keyframes marquee {
+    from {
+      transform: translateX(0);
+    }
+    to {
+      transform: translateX(calc(-100% - var(--gap)));
     }
   }
   @keyframes marquee-vertical {
-  from {
-    transform:
-    translateY(0);
+    from {
+      transform: translateY(0);
     }
-  to {
-    transform:
-    translateY(calc(-100% - var(--gap)));
+    to {
+      transform: translateY(calc(-100% - var(--gap)));
     }
   }
 }
